feat(lunatic): loop occurrence pagination (#1292)